# simple_mcp_server

./: .gitignore  README.md  pyproject.toml  task_server.py
.github/workflows/: ci.yml
client/: test_client.py
client/tests/: test_client.py
resources/: resources.py
server/: db.py  task_server.py
server/resources/: resources.py
server/tests/: test_main.py
server/tools/: __init__.py  tools.py
tests/: test_main.py
tools/: __init__.py  tools.py
