[project]
name = "machine-learning"
version = "0.1.0"
description = "Simple MCP Server with python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["server"]
testpaths = ["server/tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E","F","I"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

